<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookLib</string>
    <string name="title_activity_add_new_book">AddNewBook</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="add_new_book_btn_text">Add new book</string>
    <string name="browse_all_books_btn_text">Browse all books</string>
    <string name="titleL">Title</string>
    <string name="publisherL">Publisher</string>
    <string name="isbnL">ISBN</string>
    <string name="yearL">Year</string>
    <string name="pagesL">Pages</string>
    <string name="languageL">Language</string>
    <string name="descriptionL">Description</string>
    <string name="writtenByL">Written by</string>
    <string name="save_btn_text">Save</string>
    <string name="cancel_new_book_btn">Cancel</string>
    <string name="books_db">BOOKS</string>
    <string name="booksPrefName">BOOKS_PREFS</string>
    <string name="title_activity_book_details">BookDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="book_title">BOOK_TITLE</string>
    <string name="book_publisher">BOOK_PUBLISHER</string>
    <string name="book_writer">BOOK_WRITER</string>
    <string name="book_isbn">BOOK_ISBN</string>
    <string name="book_year">BOOK_YEAR</string>
    <string name="book_lang">BOOK_LANGUAGE</string>
    <string name="book_desc">BOOK_DESCRIPTION</string>

</resources>
